@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-09T16:23:28Z",
+  "timestamp" : "2022-08-10T01:34:36Z",
   "count_outdated" : 111,
   "uniques_outdated" : 75,
-  "count" : 116,
-  "uniques" : 79,
+  "count" : 117,
+  "uniques" : 80,
   "clones" : [
     {
       "timestamp": "2022-08-03T00:00:00Z",
@@ -14,10 +14,10 @@
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ]
+      "count": 5,
+      "count_minmax": [ 4, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 3, 4 ]
     }
   ]
 }
