@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 6,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-03T00:00:00Z",
@@ -9,8 +9,8 @@
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
